--- a/Projects/_01_Hello/web/login.html
+++ b/Projects/_01_Hello/web/login.html
@@ -7,7 +7,7 @@
 <body>
 <!--
 action: 使用 Application context 访问。 是/hello
-/login  是访问 Servlet 的
+/login  是访问 Servlet 的注解带有 login的。 @WebServlet("/login")
 //回顾 使用 Servlet 的条件是什么？
 -->
 <form action="/hello/login" method="post">
