add:CRM 最小系统运行效果。

--- a/Projects/_02_CRM/web/login.html
+++ b/Projects/_02_CRM/web/login.html
@@ -16,5 +16,24 @@ action: 使用 Application context 访问。 始终记得 这个action 的参数
   <div><button type="submit">登录</button></div>
 
 </form>
+<table style="color: blue; border: 1px solid black;">
+    <thead>
+    <tr>姓名</tr>
+    <tr>电话</tr>
+    <tr>性别</tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>张三</td>
+        <td>10086</td>
+        <td>男</td>
+    </tr>
+    <tr>
+        <td>张三2</td>
+        <td>10087</td>
+        <td>男</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
